--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -11,10 +11,11 @@
 .reviews__h2.common-h2 {
     color: #fff;
 }
-.reviews .container {
-    max-width: calc(100% - (100% - 1140px)/2);
+
+.reviews-container {
+    max-width: 100vw;
     padding: 0;
-    padding-left: calc((100% - 1141px)/2);
+    margin-left: calc((100vw - 1141px)/2);
 }
 
 /* 9.1.REVIEWS SLIDER START */
@@ -75,9 +76,10 @@
 /* 1140px */
 
 @media(max-width: 1140px) { 
-    .reviews .container {
+    .reviews-container {
         width: 100%;
         padding: 0 0 0 34px;
+        margin: 0;
     }
 
     .reviews__slider-item {
@@ -87,7 +89,7 @@
 
 /* 930px */
 @media(max-width: 930px) { 
-    .reviews .container {
+    .reviews-container {
         width: 100%;
     }
 
@@ -102,7 +104,7 @@
 
 /* 460px */
 @media(max-width: 460px) { 
-    .reviews .container {
+    .reviews-container {
         padding: 0 20px;
     }
 
