--- a/styles/style.css
+++ b/styles/style.css
@@ -173,6 +173,7 @@ li {
     color: var(--peach);
     border-radius: 45px;
     transition: .5s;
+    cursor: pointer;
 }
 
 .common-border-button:hover {
@@ -180,6 +181,7 @@ li {
     background-color: var(--peach);
     color: #fff;
     transition: .5s;
+    cursor: pointer;
 }
 
 .common-btn_white:hover {
@@ -228,6 +230,7 @@ a.common-border-button:visited {
     text-align: center;
     text-decoration: none;
     transition: .5s;
+    cursor: pointer;
 }
 
 .common-btn_peach:hover {
@@ -551,6 +554,15 @@ li.common-square-tab__active-tab::before {
         font-size: var(--text-15);
     }
 }
+
+/* 676px */
+@media(max-width: 676px) {
+    .common-succes-popup-form.common-popup-form.fancybox__content {
+        width: 100%;
+        padding: 40px 10%;
+    }
+}
+
 
 /* 460px */
 @media(max-width: 460px){
@@ -1470,6 +1482,10 @@ SERVICES PAGE START
     margin: 0 0 20px 0;
 }
 
+.services-info__h1.common-h1 {
+    text-align: center;
+}
+
 /* 1.SERVICES INFO END */
 
 /* 2.PRICES OF SERVICES START */
@@ -1767,6 +1783,9 @@ PRODUCTS PAGE START
 /* 1.CATALOG START */
 
 /* 1.1.SIDEBAR START */
+.product__header .header_scroll {
+    box-shadow: none;
+}
 
 .common-h2.catalog__h2 {
     padding: 0 0 15px;
@@ -1838,7 +1857,7 @@ PRODUCTS PAGE START
     transition: all .5s;
 }
 
-.catalog__sidebar-item:hover .catalog__sidebar-submenu {
+.catalog__sidebar-submenu.catalog__sidebar-submenu-active {
     visibility: visible;
     max-height: 400px;
     height: 100%;
@@ -1868,7 +1887,7 @@ PRODUCTS PAGE START
 .catalog__wrapper {
     display: flex;
     justify-content: space-between;
-    /* overflow: hidden; */
+    align-items: flex-start;
     height: auto;
 }
 
@@ -2011,6 +2030,7 @@ select.catalog__product-option  {
 .single-product-popup {
     display: none;
 }
+
 .single-product-popup.fancybox__content {
     width: 80%;
     flex-direction: row;
@@ -2104,6 +2124,10 @@ select.catalog__product-option  {
     display: flex;
     align-items: center;
     margin: 0 0 10px;
+}
+
+.single-product-popup__items li span {
+    margin-right: 10px;
 }
 
 .single-product-popup__items li::before {
@@ -2254,6 +2278,10 @@ select.catalog__product-option  {
         
         font-size: var(--text-36);
     }
+
+    .single-product-popup.fancybox__content {
+        width: 100%;
+    }
 }
 
 /* 488px */
@@ -2275,10 +2303,18 @@ select.catalog__product-option  {
 
     .catalog__sidebar {
         width: 100%;
+        position: absolute;
         top: 84px;
+
+        left: 0;
         z-index: 1;
 
         background-color: #fff;
+    }
+
+    .catalog__sidebar_visible .catalog__sidebar-items,
+    .common-h2.catalog__h2 {
+        padding: 0 34px;
     }
 
     .common-h2.catalog__h2 {
@@ -2291,7 +2327,7 @@ select.catalog__product-option  {
     .catalog__sidebar_visible .catalog__sidebar-items {
         opacity: 1;
         visibility: visible;
-        max-height: 900px;
+        max-height: 5000px;
 
         transition: .5s;
     }
@@ -2345,6 +2381,15 @@ select.catalog__product-option  {
 
 }
 
+/* 460px */
+@media(max-width: 460px) {   
+
+    .catalog__sidebar_visible .catalog__sidebar-items,
+    .common-h2.catalog__h2 {
+        padding: 0 20px;
+    }
+}
+
 /* 2.PRODUCTS PAGE MEDIA END */
 
 /* 
@@ -2363,22 +2408,26 @@ CARD PAGE START
 
 .card.container {
     display: flex;
+    align-items: flex-start;
     margin: 52px auto 0;
 }
+
+
 
 .card img {
     width: 30%;
     object-fit: cover;
+    margin-top: 10%;
 }
 
 .card__top-block {
-    display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
 .card__in-stock {
-    width: 20%;
+    width: 100%;
+    margin: 15px 0;
 
     font-family: var(--light);
     font-size: var(--text-14);
@@ -2388,7 +2437,7 @@ CARD PAGE START
 
 .common-h2.card__h1 {
     padding: 0;
-    margin: 0 0 30px;
+    /* margin: 0 0 30px; */
 
     font-size: var(--text-24);
 }
@@ -2688,10 +2737,6 @@ CONTACT PAGE START
         margin: 30px auto 0;
     }
 
-    .contacts.container {
-        margin-top: 0px;
-    }
-
     .reception-control {
         width: 100%;
     }
@@ -2816,9 +2861,9 @@ ERROR PAGE START
         width: 50%;
     }
 
-    .error-404 .container {
+    /* .error-404 .container {
         padding: 15px;
-    }
+    } */
 }
 
 /* 2.ERROR PAGE MEDIA END */
@@ -3071,7 +3116,7 @@ PRIVACY PAGE START
 /* 1.TEXT CONTENT START */
 
 .privacy__wrapper {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -3647,6 +3692,14 @@ MORGUES PAGE START
 .morgue__ol {
     display: flex;
     justify-content: space-between;
+}
+
+.morgue__ol div {
+    flex: 1;
+}
+
+.morgue__ol div:first-child {
+    margin-right: 30px;
 }
 
 /* 2.LIST OF MORGUES END */
