--- a/styles/contact-part.css
+++ b/styles/contact-part.css
@@ -62,29 +62,6 @@
 /* 1140px */
 
 @media(max-width: 1140px) {
-    .contacts {
-        flex-direction: column-reverse;
-        align-items: center;
-    }
-
-    .contacts__map{
-        width: 100%;
-        height: 400px;
-    }
-
-    .contacts__wrapper {
-        width: 100%; 
-        margin: 0 auto 70px;
-    }
-
-    .contacts__p {
-        margin: 70px 0 0;
-    }
-
-    .contacts__h2.common-h2 {
-        text-align: center;
-    }
-
     .contacts.container {
         margin: 52px auto 0;
     }
@@ -93,7 +70,9 @@
 /* 930px */
 @media(max-width: 930px) {
     .contacts.container {
-        margin: 30px auto 0;
+        margin: 0 auto;
+        padding: 100px 0 0;
+        position: relative;
     }
 
     .contacts__item {
@@ -108,16 +87,60 @@
     .contacts__wrapper {
         margin: 0 auto 30px;
     }
+
+    .contacts {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .contacts__map{
+        width: 100%;
+        height: 400px;
+    }
+
+    .contacts__wrapper {
+        width: 100%; 
+        margin: 0 auto ;
+        padding: 0 34px;
+    }
+
+    .contacts__h2.common-h2 {
+        position: absolute;
+        top: 0;
+        margin: 0 auto;
+        padding-top: 15px;
+        width: calc(100% - 68px);
+        left: 34px;
+
+        text-align: center;
+    }
+
+    .contacts__p {
+        margin: 50px 0 0;
+    }
+
+    .contacts__btn.common-btn_peach {
+        width: 30%;
+    }
 }
 
-/* 453px */
-@media(max-width: 453px) {
+/* 508px */
+@media(max-width: 508px) {
+    .contacts__btn.common-btn_peach {
+        width: 40%;
+    }
+}
+
+/* 460px */
+@media(max-width: 460px) {
     .contacts__wrapper {
         width: 100%;
+        padding: 0 20px;
     }
 
     .contacts__btn.common-btn_peach  {
-        width: 100%;
+        /* width: 100%; */
+        margin: 30px auto 0;
     }
     
     .contacts__map {
@@ -125,7 +148,10 @@
         height: 200px;
     }
 
-    
+    .contacts__h2.common-h2 {
+        width: calc(100% - 40px);
+        left: 20px;
+    }
 }
 
 /* 2.MEDIA END */
