--- a/styles/header.css
+++ b/styles/header.css
@@ -269,7 +269,7 @@ a.header__phone {
     position: relative;
     z-index: 9;
     width: 100%;
-    padding: 19px 10px 19px 0;
+    padding: 5px 10px 19px 0;
 
     color: var(--peach);
 }
@@ -726,6 +726,10 @@ button.popup-btn {
 
     body.mobile-header_active {
         overflow: hidden;
+    }
+
+    .menu__sub-menu a {
+        padding-top: 19px;
     }
 
 }
