--- a/styles/contact-part.css
+++ b/styles/contact-part.css
@@ -71,7 +71,7 @@
 @media(max-width: 930px) {
     .contacts.container {
         margin: 0 auto;
-        padding: 100px 0 0;
+        padding: 85px 0 0;
         position: relative;
     }
 
@@ -82,6 +82,10 @@
     .contacts__p,
     .contacts__btn.common-btn_peach {
         margin: 30px 0 0;
+    }
+    
+    .contacts__p {
+        text-align: justify;
     }
 
     .contacts__wrapper {
@@ -120,14 +124,8 @@
     }
 
     .contacts__btn.common-btn_peach {
-        width: 30%;
-    }
-}
-
-/* 508px */
-@media(max-width: 508px) {
-    .contacts__btn.common-btn_peach {
-        width: 40%;
+        width: fit-content;
+        padding: 15px 30px;
     }
 }
 
@@ -139,7 +137,6 @@
     }
 
     .contacts__btn.common-btn_peach  {
-        /* width: 100%; */
         margin: 30px auto 0;
     }
     
